--- a/example/app/src/todo/TodoList.css
+++ b/example/app/src/todo/TodoList.css
@@ -1,15 +1,16 @@
 ul {
   list-style-type: none;
-  padding: 0;
 }
 
 li {
   display: flex;
-  justify-content: space-between;
   align-items: center;
-  padding: 0.5rem 0;
+}
+
+span {
+  flex: 0 0 80%;
 }
 
 button {
-  margin-left: 0.5rem;
+  flex: 0 0 10%;
 }
