--- a/example/app/src/todo/TodoList.css
+++ b/example/app/src/todo/TodoList.css
@@ -1,16 +1,10 @@
 ul {
   list-style-type: none;
+  padding: 0;
 }
 
 li {
-  display: flex;
-  align-items: center;
+  display: grid;
+  grid-template-columns: 1fr 10% 10%;
 }
 
-span {
-  flex: 0 0 80%;
-}
-
-button {
-  flex: 0 0 10%;
-}
